syntax = "proto3";

package pb;

import "google/api/annotations.proto";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// 不生成XXX开头的方法
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;


// 定义Content服务
service Content {
    rpc Add (ContentAddRequest) returns (ContentAddResponse) {
        option (google.api.http) = {
            post: "/content/add"
            body: "*"
        };
    }
    rpc List (ContentListRequest) returns (ContentListResponse) {
        option (google.api.http) = {
            get: "/content/list"
        };
    }
}

// 增加请求
message ContentAddRequest {
    string title = 1;
    string body = 2;
}

// 增加响应
message ContentAddResponse {
    int64 id = 1;
}


// 列表请求
message ContentListRequest {
    repeated string columns = 1;    // 可查询的字段
    int32 page = 2; // 页码
    int32 pageSize = 3; // 页大小
}
// 列表响应
message ContentListResponse {
    repeated ContentListModel rows = 1;    // 记录集
    int32 total = 2;    // 记录总数
}

// 内容列表字段
message ContentListModel {
    int64 id = 1 [(gogoproto.jsontag) = "id,string", (gogoproto.moretags) = "pg:\"id\""];
    string title = 2 [(gogoproto.moretags) = "pg:\"title\""];
    int64 createTime = 3 [(gogoproto.moretags) = "pg:\"create_time\""];
}
